# aws-test-plugin

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
agents/: aws-test-engineer.md
skills/aws-contract-testing/: SKILL.md
skills/aws-contract-testing/references/: openapi-patterns.md
skills/aws-e2e-testing/: SKILL.md
skills/aws-e2e-testing/references/: api-gateway-patterns.md  batch-patterns.md  step-function-patterns.md
skills/aws-integration-testing/: SKILL.md
skills/aws-integration-testing/references/: lambda-dynamodb-patterns.md  lambda-eventbridge-patterns.md  lambda-kinesis-patterns.md  lambda-rds-patterns.md  lambda-s3-patterns.md  lambda-sns-patterns.md  lambda-sqs-patterns.md
skills/aws-perf-load-testing/: SKILL.md
skills/aws-perf-load-testing/references/: benchmark-patterns.md  locust-patterns.md
skills/aws-test-orchestrator/: SKILL.md
skills/aws-test-orchestrator/references/: secrets-and-config.md
skills/aws-unit-testing/: SKILL.md
skills/aws-unit-testing/references/: boundary-branch-patterns.md  edge-case-patterns.md
src/aws_test_plugin/: AGENTS.md  __init__.py  cli.py
src/aws_test_plugin/scripts/: analyze_results.py  run_tests.py  scaffold.py
tests/: test_cli.py
