[project]
name = "aws-test-plugin"
version = "0.1.2"
description = "AI-powered test generation skills for AWS Python projects — works with Claude Code, GitHub Copilot, and Codex"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "whitewhiteqq" },
]
keywords = [
    "aws", "testing", "lambda", "api-gateway", "step-functions", "batch",
    "claude", "copilot", "codex", "ai-agent", "skills", "plugin",
    "pytest", "moto", "locust", "e2e", "integration", "contract",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Minimal runtime deps for the CLI and safe report parsing
dependencies = [
    "defusedxml>=0.7.1",
]

[project.scripts]
aws-test-plugin = "aws_test_plugin.cli:main"

[project.optional-dependencies]
# Core test dependencies (most users want this)
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[all]>=5.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "pydantic>=2.0",
]
# Unit testing extras (branch coverage)
unit = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Database integration testing
db = [
    "testcontainers[postgres]>=4.0",
    "psycopg2-binary>=2.9",
]
# Performance benchmarks
perf = [
    "pytest-benchmark>=4.0",
]
# Load testing
load = [
    "locust>=2.20",
]
# E2E testing against deployed APIs
e2e = [
    "requests>=2.31",
    "urllib3>=2.0",
]
# Reporting
report = [
    "pytest-html>=4.0",
    "allure-pytest>=2.13",
]
# Everything
all = [
    "aws-test-plugin[test,unit,db,perf,load,e2e,report]",
]
[project.urls]
Homepage = "https://github.com/whitewhiteqq/aws-test-plugin"
Repository = "https://github.com/whitewhiteqq/aws-test-plugin"
Issues = "https://github.com/whitewhiteqq/aws-test-plugin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "14 days"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_test_plugin"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "aws_test_plugin/skills"
"agents" = "aws_test_plugin/agents"
".claude-plugin" = "aws_test_plugin/.claude-plugin"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
targets = ["src"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src/**/*.py"]

[tool.ty.rules]
# Promoted to error once ty reaches feature parity with mypy
possibly-unresolved-reference = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests with moto/testcontainers",
    "contract: API contract validation tests",
    "e2e: End-to-end tests (requires deployed environment)",
    "performance: Performance benchmark tests",
    "load: Load/stress tests with Locust",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "ty>=0.0.0a1",
    "types-defusedxml",
    "bandit[toml]>=1.7.9",
    "pip-audit>=2.8.0",
]
